;; Tests of the interactions between Threads and Domains

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps threadomain.exe))

(executable
 (name threadomain)
 (modules threadomain)
 (ocamlc_flags -g)
 (ocamlopt_flags -g)
 (link_flags -runtime-variant=d -g)
 (libraries util qcheck-core threads)
 (preprocess (pps ppx_deriving.show)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps threadomain.exe)
 (action (run ./%{deps} --verbose)))
